syntax = "proto3";

package grpc.post;

message GetPostRequest {
    int32 id = 1;
}

message CreatePostRequest {
    string title = 1;
    string text = 2;
    repeated string tags = 3;
}

message UpdatePostRequest {
    int32 id = 1;
    string title = 2;
    string text = 3;
    repeated string tags = 4;
}

message DeletePostRequest {
    int32 id = 1;
}

message Post {
    int32 id = 1;
    string title = 2;
    string text = 3;
    string createdAt = 4;
    string updatedAt = 5;
    repeated string tags = 6;
}

message Message {
    string message = 1;
}

service PostService {
    rpc getPost (GetPostRequest) returns (Post) {
    }

    rpc createPost (CreatePostRequest) returns (Post) {
    }

    rpc updatePost (UpdatePostRequest) returns (Post) {
    }

    rpc deletePost (DeletePostRequest) returns (Message) {
    }
}
